--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
     "name": "server",
     "version": "1.0.0",
     "main": "server.js",
+    "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "node --env-file .env --watch server.js"
     },
     "keywords": [],
-    "author": "",
+    "author": "Koi Studio",
     "license": "ISC",
     "description": "",
     "dependencies": {
