--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "description": "",
     "dependencies": {
         "bcrypt": "^5.1.1",
+        "cookie": "^1.0.1",
         "cors": "^2.8.5",
         "express": "^4.21.1",
         "express-validator": "^7.2.0",
