--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "main": "server.js",
     "type": "module",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "node --env-file .env --watch index.js"
+        "dev": "node --env-file .env --watch index.js",
+        "start": "node --env-file .env --watch index.js"
     },
     "keywords": [],
     "author": "Koi Studio",
