--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "cookie": "^1.0.1",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
+        "exceljs": "^4.4.0",
         "express": "^4.21.1",
         "express-validator": "^7.2.0",
         "jsonwebtoken": "^9.0.2",
