--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.10.0",
         "pdfkit": "^0.16.0",
+        "pdfkit-table": "^0.1.99",
         "pg": "^8.13.1",
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.37.5"
